text-align for price fix

--- a/style.css
+++ b/style.css
@@ -135,7 +135,6 @@ h1:only-child {
 }
 .pages p {
     margin: 0;
-    text-align: right;
 }
 .pages span {
     grid-column: 1/3;
